//protoc --go_out=plugins=grpc:. *.proto

syntax = "proto3";

package feedback;

// The Id service definition.
service FeedBack {
    rpc AddFeedback(AddFeedbackRequest) returns (AddFeedbackReply) {}                                //添加反馈
    rpc AddFeedbackBaseTenant(AddFeedbackBaseTenantRequest) returns (AddFeedbackBaseTenantReply) {}  //基于租户添加反馈
    rpc GetFeedbacks(GetFeedbacksRequest) returns (GetFeedbacksReply) {}                             //分类获取反馈列表
    rpc GetFeedbacksByType(GetFeedbacksByTypeRequest) returns (GetFeedbacksByTypeReply) {}           //获得反馈列表
    rpc GetFeedback (GetFeedbackRequest) returns (GetFeedbackReply) {}                               //获得反馈信息
    rpc DelFeedback (DelFeedbackRequest)  returns (DelFeedbackReply) {}
    rpc BatchFeedback (BatchFeedbackRequest)  returns (BatchFeedbackReply) {}                        //批量获取
}

message Feedback{
    int32    id = 1;
    string   description = 2;
    string   deviceInfo = 3;
    string   appInfo  = 4;
    string   userInfo = 5;
    string   mobileInfo  = 6;
    string   extendInfo  = 7;
    string   files  = 8;
    string   contact = 9;
    int64    createTime = 10;
    int64    updateTime = 11;
    int32    type = 12;
    int64    tid = 13;
}

message AddFeedbackRequest {
    string   source = 1;
    string   description = 2;
    string   deviceInfo = 3;
    string   appInfo  = 4;
    string   userInfo = 5;
    string   mobileInfo  = 6;
    string   extendInfo  = 7;
    repeated string  files  = 8;
    string   contact = 9;
    int64    createTime = 10;
    int64    updateTime = 11;
}

message AddFeedbackReply {
    int32   errorCode = 1;
}

message AddFeedbackBaseTenantRequest{
    int64    tid = 12;
    int32    type = 13;
    string   description = 2;
    int64    createTime = 10;
    int64    updateTime = 11;
    string   files = 14;
}

message AddFeedbackBaseTenantReply{
    int32 errorCode = 1;
}

message GetFeedbacksRequest {
    int64 tid = 1;
    int32 page = 2;
    int32 count = 3;
}

message GetFeedbacksReply {
    repeated Feedback feedBack =1;
    int32 errorCode = 2;
    int32 totalCount = 3;
}

message GetFeedbacksByTypeRequest {
    int64 tid = 1;
    int32 page = 2;
    int32 count = 3;
    int32 type = 4;
}

message GetFeedbacksByTypeReply {
    repeated Feedback feedBack =1;
    int32 errorCode = 2;
    int32 totalCount = 3;
}

message GetFeedbackRequest {
    int32    id  = 1;
    int64    tid = 2;
}

message GetFeedbackReply {
    Feedback feedBack = 1;
    int32 errorCode = 2;
}

message DelFeedbackRequest{
    int64 tid = 1;
    repeated int32 ids = 2;
}
message DelFeedbackReply{
    int32 errorCode = 1;
}

message BatchFeedbackRequest{
    int64 tid = 1;
    repeated int32 ids = 2;

}
message BatchFeedbackReply{
    int32 errorCode = 1 ;
    repeated Feedback feedBack = 3;
}

